# Compiler

./: .gitignore  CMakeLists.txt  Makefile  erro.asm  ligador.cpp  montador  montador.cpp  readme.md  simulador  simulador.cpp  test.asm  test.obj2  test.out  test2.asm  test_2.asm
aux/ligador/: ligador_aux.cpp  ligador_aux.hpp
aux/montador/: montador_aux.cpp  montador_aux.hpp
aux/montador/first_pass/: first_pass_aux.cpp  first_pass_aux.hpp
aux/montador/second_pass/: second_pass_aux.cpp  second_pass_aux.hpp
aux/simulador/: simulador_aux.cpp  simulador_aux.hpp
aux_functions/: aux.cpp  aux.hpp
database/: tables.cpp  tables.hpp  types.cpp  types.hpp
error/: error_handling.hpp
error/Lexic/: lexic.cpp
error/Semantic/: semantic.cpp
error/Sintatic/: sintatic.cpp
tests/Base_vezes_Altura_sobre_2/: test.asm
tests/area_triangulo/: test.asm
tests/fibonacci/: test.asm
